--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -40,6 +40,7 @@ footer {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: rgba(255, 255, 255, 0.5);
+  margin-top: 2px;
 }
 
 /* Social links */
